2008-06-05  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/gui/setup_video.cpp: Lowered default particle
    detail level.

2008-06-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h, src/main.cpp,
	src/resources/buddylist.cpp, src/resources/spritedef.cpp,
	src/resources/resourcemanager.cpp: Added command line argument to
	specify the update host (-H). Also, to avoid problems when files with
	the same name are served by different update hosts, the updates are
	now stored in an update host specific directory. Based on a patch by
	Sanga.

2008-06-04  Lloyd Bryant  <lloyd_bryant@netzero.net>

	* src/net/charserverhandler.cpp: Display shield sprite also in
	character select window.

2008-05-30  Lloyd Bryant  <lloyd_bryant@netzero.net>

	* src/net/equipmenthandler.cpp, src/net/beinghandler.cpp,
	src/net/protocol.h, src/being.h: Merged handling for eAthena packets
	0x00c3 and 0x01d7 and added support for displaying a shield sprite.

2008-05-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp: Changed the way particle emitter skip is handled
	to make linear and circular emitters work with particleEmitterSkip
	enabled.
	* src/gui/setup.cpp, src/gui/setup_video.cpp, src/gui/setup_video.h:
	Added slider for controlling particleEmitterSkip (overall quality of
	particle effects) to video setup menu.

2008-05-28  Dennis Friis  <peavey@placid.dk>

	* src/being.cpp: Change order of direction to up/down/right/left in
	Being::getSpriteDirection to fix inconsistancy of facing direction
	when walking diagonally.

2008-05-27  David Athay  <ko2fan@gmail.com>

	* src/main.cpp, src/player_relations.cpp: Changed OSX tmw directory to
	a more suitable location, and fixed compile error.

2008-05-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/Makefile.am, src/CMakeLists.txt: Fixed linker error caused by
	missing module.

2008-05-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>
